--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Friend Name</title>
+    <title>Khanh Huyen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
     <style type="text/css">
         @import url("https://fonts.googleapis.com/css?family=Sacramento&display=swap");
