--- a/index.html
+++ b/index.html
@@ -180,18 +180,19 @@
     </div>
     </div>
 </div>
-<audio id="myAudio" loop muted>
+<audio id="myAudio" loop>
     <source src="song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
 <script>
-    window.addEventListener("load", function() {
+    document.addEventListener("click", function() {
         var audio = document.getElementById("myAudio");
-        audio.muted = false;
-        audio.play().catch(function(error) {
-            console.log("Playback failed: ", error);
-        });
+        if (audio.paused) {
+            audio.play().catch(function(error) {
+                console.log("Playback failed: ", error);
+            });
+        }
     });
 </script>
 
