--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hoàng Tùng</title>
+    <title>Minh Hiếu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
     <style type="text/css">
         @import url("https://fonts.googleapis.com/css?family=Sacramento&display=swap");
@@ -149,7 +149,7 @@
 <body>
 <div class="Happy">
     <h1>Happy Birthday <br> 
-        Nguyễn Hoàng Tùng
+        Lê Minh Hiếu
     </h1>
 </div>
 <div class="pic">
