--- a/index.html
+++ b/index.html
@@ -155,28 +155,28 @@
 <div class="pic">
    <div class="main">
      <div class="single-column">
-        <a href="#"><img src="pic1.jpg" alt="image"></a>
-        <a href="#"><img src="pic3.jpg" alt="image"></a>
-        <a href="#"><img src="pic2.jpg" alt="image"></a>
-        <a href="#"><img src="pic4.jpg" alt="image"></a>
+        <a href="#"><img src="411370533_1518746412192802_7588047695963398255_n.jpg" alt="image"></a>
+        <a href="#"><img src="449090103_734521835389901_7179047416402469966_n.jpg" alt="image"></a>
+        <a href="#"><img src="449384069_367233319722203_2994476496597275975_n.jpg" alt="image"></a>
+        <a href="#"><img src="449396972_1181139166551091_5841175703417403917_n.jpg" alt="image"></a>
     </div>
     <div class="single-column">
-        <a href="#"><img src="pic5.jpg" alt="image"></a>
-        <a href="#"><img src="pic6.jpg" alt="image"></a>
-        <a href="#"><img src="pic7.jpg" alt="image"></a>
-        <a href="#"><img src="pic8.jpg" alt="image"></a>
+        <a href="#"><img src="449507840_412508847768202_5871683860847393285_n.jpg" alt="image"></a>
+        <a href="#"><img src="449902866_998343488416694_7957772762592574512_n.jpg" alt="image"></a>
+        <a href="#"><img src="449913609_1637287273479722_3785690747670308364_n.jpg" alt="image"></a>
+        <a href="#"><img src="411370533_1518746412192802_7588047695963398255_n.jpg" alt="image"></a>
     </div>
     <div class="single-column">
-        <a href="#"><img src="pic9.jpg" alt="image"></a>
-        <a href="#"><img src="pic10.jpg" alt="image"></a>
-        <a href="#"><img src="pic11.jpg" alt="image"></a>
-        <a href="#"><img src="pic12.jpg" alt="image"></a>
+        <a href="#"><img src="449090103_734521835389901_7179047416402469966_n.jpg" alt="image"></a>
+        <a href="#"><img src="449384069_367233319722203_2994476496597275975_n.jpg" alt="image"></a>
+        <a href="#"><img src="449396972_1181139166551091_5841175703417403917_n.jpg" alt="image"></a>
+        <a href="#"><img src="449507840_412508847768202_5871683860847393285_n.jpg" alt="image"></a>
     </div>
     <div class="single-column">
-        <a href="#"><img src="pic13.jpg" alt="image"></a>
-        <a href="#"><img src="pic14.jpg" alt="image"></a>
-        <a href="#"><img src="pic15.jpg" alt="image"></a>
-        <a href="#"><img src="pic16.jpg" alt="image"></a>
+        <a href="#"><img src="449902866_998343488416694_7957772762592574512_n.jpg" alt="image"></a>
+        <a href="#"><img src="449913609_1637287273479722_3785690747670308364_n.jpg" alt="image"></a>
+        <a href="#"><img src="411370533_1518746412192802_7588047695963398255_n.jpg" alt="image"></a>
+        <a href="#"><img src="449090103_734521835389901_7179047416402469966_n.jpg" alt="image"></a>
     </div>
     </div>
 </div>
