--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Minh Hiếu</title>
+    <title>Grace To</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
     <style type="text/css">
         @import url("https://fonts.googleapis.com/css?family=Sacramento&display=swap");
@@ -149,34 +149,34 @@
 <body>
 <div class="Happy">
     <h1>Happy Birthday <br> 
-        Lê Minh Hiếu
+       Grace To
     </h1>
 </div>
 <div class="pic">
    <div class="main">
      <div class="single-column">
-        <a href="#"><img src="411370533_1518746412192802_7588047695963398255_n.jpg" alt="image"></a>
-        <a href="#"><img src="449090103_734521835389901_7179047416402469966_n.jpg" alt="image"></a>
-        <a href="#"><img src="449384069_367233319722203_2994476496597275975_n.jpg" alt="image"></a>
-        <a href="#"><img src="449396972_1181139166551091_5841175703417403917_n.jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
     </div>
     <div class="single-column">
-        <a href="#"><img src="449507840_412508847768202_5871683860847393285_n.jpg" alt="image"></a>
-        <a href="#"><img src="449902866_998343488416694_7957772762592574512_n.jpg" alt="image"></a>
-        <a href="#"><img src="449913609_1637287273479722_3785690747670308364_n.jpg" alt="image"></a>
-        <a href="#"><img src="411370533_1518746412192802_7588047695963398255_n.jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
     </div>
     <div class="single-column">
-        <a href="#"><img src="449090103_734521835389901_7179047416402469966_n.jpg" alt="image"></a>
-        <a href="#"><img src="449384069_367233319722203_2994476496597275975_n.jpg" alt="image"></a>
-        <a href="#"><img src="449396972_1181139166551091_5841175703417403917_n.jpg" alt="image"></a>
-        <a href="#"><img src="449507840_412508847768202_5871683860847393285_n.jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
     </div>
     <div class="single-column">
-        <a href="#"><img src="449902866_998343488416694_7957772762592574512_n.jpg" alt="image"></a>
-        <a href="#"><img src="449913609_1637287273479722_3785690747670308364_n.jpg" alt="image"></a>
-        <a href="#"><img src="411370533_1518746412192802_7588047695963398255_n.jpg" alt="image"></a>
-        <a href="#"><img src="449090103_734521835389901_7179047416402469966_n.jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
+        <a href="#"><img src=".jpg" alt="image"></a>
     </div>
     </div>
 </div>
